LIST OF CHANGES
---------------

release 6.21.0
 - Add run_transfer_complete date to pac_bio_run_well_metrics

release 6.20.1
 - Add new PacBio conf values to pac_bio_run_well_metrics
 - Add substitution metrics from C2A qc check to the iseq_product_metrics
   table

release 6.20.0
 - Add a table for storing one of Illumina's XML files with
   run information, iseq_run_info.
   Add columns to the iseq_run table to capture some values from
   these Illumina files. The choice of the values is driven by the
   current financial reporting need.
   Create a trigger to populate these columns when the record in
   the iseq_run_info is created or updated.
 - Bring DBIx classes up-to-date. 

release 6.19.2
 - additional fields for the pac_bio_run_well_metrics tables and
   bring DBIx classes up-to-date.

release 6.19.1
 - change collation on id_product row of seq_product_irods_locations to
   utf8_unicode_ci to enable JOINs

release 6.19.0
 - bring DBIx classes up-to-date with the prod. database

release 6.18.0
 - bring DBIx classes up-to-date with the prod. database
 - add product_irods table to provide irods paths for data
 - add columns to iseq_external_product_metrics for data deletion status

release 6.17.0
 - Improve record creation for iseq_external_product_metrics.
   Be able to handle complex file names, which explicitly list
   merged lanes, for example, 38421_1-2-4#30.cram. Be able to
   generate correct composition, product id and linking rows for
   such records.

release 6.16.0
 - add user requested control columns to the pac_bio_run_well_metrics
   table
 - Update Copyright statements for all Perl modules according to WSI
   requirements. Retrofit years using dates returned by 'git log' command.
   Example:
     git log -- SOME_MODULE.pm | grep 'Date:' | cut -d ':' -f 4 | \
     cut -d ' ' -f 2 | uniq | sort -g | xargs echo | \
     perl -nle '$_=~s/\ /,/g; print "Copyright (C) $_ Genome Research Ltd."'