@@ -64,6 +64,14 @@ PacBio run well metrics id, see 'pac_bio_run_well_metrics.id_pac_bio_rw_metrics_
 
 PacBio run id, see 'pac_bio_run.id_pac_bio_tmp'
 
+=head2 id_pac_bio_product
+
+  data_type: 'char'
+  is_nullable: 1
+  size: 64
+
+Product id
+
 =cut
 
 __PACKAGE__->add_columns(
@@ -73,6 +81,8 @@ __PACKAGE__->add_columns(
   { data_type => 'integer', is_foreign_key => 1, is_nullable => 0 },
   'id_pac_bio_tmp',
   { data_type => 'integer', is_foreign_key => 1, is_nullable => 1 },
+  'id_pac_bio_product',
+  { data_type => 'char', is_nullable => 1, size => 64 },
 );
 
 =head1 PRIMARY KEY
@@ -125,8 +135,8 @@ __PACKAGE__->belongs_to(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07049 @ 2021-02-09 11:33:17
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:Ea+iVDOfptyUAPyi3Otvyg
+# Created by DBIx::Class::Schema::Loader v0.07049 @ 2022-09-08 11:27:30
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:0D6rwrki9e+wKFvmJiknPA
 
 our $VERSION = '0';
 
