@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - Add id_pac_bio_product to pac_bio_product_metrics
+
 release 6.21.0
  - Add run_transfer_complete date to pac_bio_run_well_metrics
 
